Changelog for JErgometer
""""""""""""""""""""""""

//== 0.7.4 ==

2010-01-10
* [stefan]  * done enhancement #156: replace buttons with nicer ones

== 0.7.3 ==

2009-12-22
* [stefan]  * implemented feature #157: add an update mechanism
            * solved issue #158: automate release process
                - version is automatically incremented
                - zip and tar.gz are automatically created
                - source code is automatically tagged in the svn repository
            * implemented feature #160: settings window should be closed when pressing escape
            * added DLLs for Windows i386 and amd64 and Mac OS X i386
                - this should be the first release that supports Mac
            * improved the start scripts (allows a restart of the program, checks OS and architecture)

== 0.7.2 ==

2009-11-28
* [stefan]  * fixed bug #153: "Edit" not available in program menu anymore

== 0.7.1 ==

2009-11-21
* [stefan]  * implemented feature #148: add "rename" menu entry to popup of program tree
            * fixed bug #149: JErgometer hangs when launched the editor
            * fixed bug #151: pressing F5 on a selected bike program does not update the program
            * fixed bug #150: empty directories look like files in the program tree
            * implemented feature #152: add "create directory" to program tree popup

== 0.7.0 ==

2009-09-20
* [stefan]  * implemented feature #138: allow copying programs in the program tree
            * fixed bug #146: update of the program tree via F5 does not work
            * implemented enhancement #147: change shortcut to edit program files to F4

2009-09-19
* [stefan]  * implemented enhancement issue #144: programs and subdirectores in the program tree should be alphabetically sorted
            * implemented feature issue #145: add menu entry to update program tree

2009-06-07
* [stefan]  * solved issue #139: stop button is not disabled after start of JErgometer